<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">"PassAndroid"</string>
    <string name="menu_settings">"Settings"</string>
    <string name="logo">"logo"</string>
    <string name="menu_map">"show on map"</string>
    <string name="menu_delete">"delete"</string>
    <string name="menu_share">"share"</string>
    <string name="menu_refresh">"refresh"</string>
    <string name="barcode">"barcode"</string>
    <string name="help_label">"Help"</string>
<string name="help_content"><![CDATA[
<h1>What is it?</h1>

This app is a viewer for passbooks - a passbook could be a e.g. <b>boarding-pass</b> for your next flight, a coupon for a nice hot beverage on the destination, a movie ticket, a membership card - there are a lot of possibilities.
Basically it is a replacement for a piece of paper or plastic you would normally have to carry with you - so lets save some trees and <b>reduce waste!</b>

<h1>Example passes</h1>

Do you need some passes to play around and see things in action? <a href=\'http://ligi.de/passandroid_samples/index.html\'>Here are some</a> for you!

<h1>How does it work?</h1>

There are so called pkpass files - you can open them with this app - e.g. when you receive them via email or get an Download-option. The most important content is the BarCode ( QR , AZTEC & PDF417which authorizes you most of the time - but it also has other interesting content like a description - often a time (hat you now can add to your calendar  - often also locations (o give you directions) - just try It out!
The app is offline usable once you downloaded the pass!

<H1>Credits</H1>
Big thanks to <a href="http://ltorrecilla.com/">Luis Torrecilla</a> for the Design & <a href="https://github.com/cketti">Cketti</a> for pull-requests!

<H1>Feedback</H1>
Give feedback in the <a href=\'https://plus.google.com/communities/116353894782342292067\'>Google+ Community</a> or you can drop the <a href=\'mailto:ligi@ligi.de\'>author a mail.</a> If you like the app rate it on <a href=\'https://play.google.com/store/apps/details?id=org.ligi.ticketviewer\'>Google Play</a> I also would love to hear stories about where you used this app.

<h1>History</h1>

I stumbled upon Passbook files when i received my ticket for the 29c3 - I liked the Idea - but there was no Android App which was working for me. I saw that the implementation is quite easy ( just a zip container with json and images ) - The first version was build very quick & was working for me ( got entry to 29C3 ) - In the following year I have not worked on this app much as I had no real use-cases but there where a lot of users downloading the app ( nearly 100k now ) and I fixed processing of some passes that where send to me ( some passes contain really broken json .. )
One year later - just before the 30C3 - I came to work a bit on this app again - for 2 reasons:
 - a friend of mine is very into this whole BTLE thing and location beacon / context aware thing could be interesting for Passbook - but nothing ready yet
 - I got a mail from a nice designer who did a nice redesign
This all was leading to PassAndroid - a completely new version - with a new look and new functions (sorting and adding to calendar alongside pull to refresh a navigation drawer and contextual ActionBar menu

<H1>More</H1>
This app ist best launched with <a href=\'https://play.google.com/store/apps/details?id=org.ligi.fast&referrer=utm_source%3Dticketview%26utm_medium%3Dapp\'>FAST App Search Tool</a> which is available for free and needs not a single permission!

<H1>Legal</H1>This app is not affiliated with Apple - Passbook might be Trademark by Apple, but introduced like a standard so this should be OK <br/>

THIS SOFTWARE IS PROVIDED "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

    ]]></string>
    <string name="drawer_open">"open"</string>
    <string name="drawer_close">"close"</string>
    <string name="pass_problem">"Sorry, but there was a problem processing this Passbook. If you want you can send me this passbook so I can check what the problem is and improve the software."</string>
    <string name="problem">"Problem"</string>
    <string name="send">"Send"</string>
    <string name="delete">"Delete!"</string>
    <string name="choose_location">"Choose Location"</string>
    <string name="scan_empty_text"><![CDATA[searching for passes - you can also <a href=\'http://ligi.de/passandroid_samples/index.html\'>download example passes from here</a> ]]></string>
    <string name="no_passes_empty_text"><![CDATA[No passes? ->you can <a href=\'http://ligi.de/passandroid_samples/index.html\'>download example passes from here</a> ]]></string>
    <string name="no_passes_appendix"><![CDATA[<br/><br/>Is <b>your Pass</b> not working? -><a href="mailto:ligi@ligi.de?subject=my%20pass%20is%20not%20working"> Write to me!</a> ]]></string>
    <string name="boarding_pass">"Boarding Pass"</string>
    <string name="category_event">"Event"</string>
    <string name="category_coupon">"Coupon"</string>
    <string name="category_storecard">"Store Card"</string>
    <string name="category_generic">"generic"</string>
    <string name="category_none">"no Category"</string>
    <string name="nav_more">"MORE"</string>
    <string name="nav_sort">"SORT"</string>
    <string name="nav_sort_category">"Category"</string>
    <string name="nav_sort_date">"Date"</string>
    <string name="nav_categories">"CATEGORIES"</string>
    <string name="nav_comunity">"Community"</string>
    <string name="nav_share">"Share"</string>
    <string name="pass_directions">"Navigate"</string>
    <string name="pass_to_calendar">"to Calendar"</string>
    <string name="invalid_passbook_title">Invalid Passbook</string>
    <string name="searching_in">searching in %s</string>
    <string name="preparing_pass">Preparing Pass</string>
    <string name="please_wait">please wait - shouldn\'t be long</string>
    <string name="passbook_is_shared_subject">a Passbook is shared with you</string>
    <string name="passbook_share_chooser_title">How to send Pass?</string>
    <string name="dialog_delete_confirm_text">Do you really want to delete this passbook?</string>
    <string name="dialog_delete_title">Sure?</string>
    <string name="dialog_delete_confirm_delete_source_checkbox">also delete source?</string>
    <string name="nav_add">Add</string>
    <string name="more">MORE</string>
    <string name="less">LESS</string>
    <string name="select_picture">Select Picture</string>
    <string name="scanning_for_passes" >Scanning for Passes</string>
    <string name="fab_add_dialog_title">Source</string>
    <string name="fab_choice_scan_pkpass_files">Scan for pkpass files</string>
    <string name="fab_choice_add_demo_pass">Add Demo-Pass</string>
    <string name="fab_choice_create_pass">Create Pass (experimental)</string>
    <string name="empty_text_view"><big><b>No pass yet</b></big>
    \n\n\n You can search your phone for passes
    \n\n or create your own
    \n\n or try a demo pass
    \n\n just press + down below
    </string>
    <string name="downloading_new_pass_version">downloading new pass version</string>
</resources>