<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/thumbnail_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo"
        android:paddingBottom="10dp" />


    <ImageView
        android:id="@+id/strip_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/front_field_container"
        />

    <ImageView
        android:id="@+id/barcode_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/barcode" />


    <TextView
        android:id="@+id/barcode_alt_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textSize="21sp"
        android:id="@+id/moreTextView"
        android:fontFamily="sans-serif" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:animateLayoutChanges="true"
        android:layout_height="wrap_content">

        <TextView
        android:id="@+id/back_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:visibility="gone"

        android:padding="20dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo"
        android:padding="16dp"
        android:paddingBottom="10dp" />
</LinearLayout>