<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:fab="http://schemas.android.com/apk/res-auto"
                                        android:id="@+id/drawer_layout"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:fab="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
                android:id="@+id/content_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:choiceMode="singleChoice"
                android:divider="@null"
                android:listSelector="@android:color/transparent"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/empty_text_view"
                android:singleLine="false"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:id="@+id/emptyView"
                />

        <net.i2p.android.ext.floatingactionbutton.FloatingActionsMenu
                android:id="@+id/fam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                fab:fab_addButtonColorNormal="@color/accent"
                fab:fab_addButtonColorPressed="@color/icon_green"
                fab:fab_addButtonPlusIconColor="@android:color/black"
                fab:fab_labelStyle="@style/menu_labels_style"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp">

            <net.i2p.android.ext.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_action_open_file"
                    android:src="@drawable/ic_fam_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"

                    fab:fab_size="mini"
                    fab:fab_colorNormal="@color/secondary"
                    fab:fab_title="Open File"
                    fab:fab_colorPressed="@color/icon_green"/>

            <net.i2p.android.ext.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_action_demo_pass"
                    android:src="@drawable/ic_fam_giftcard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fab:fab_size="mini"
                    fab:fab_colorNormal="@color/secondary"
                    fab:fab_title="@string/fab_choice_add_demo_pass"
                    fab:fab_colorPressed="@color/icon_green"/>


            <net.i2p.android.ext.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_action_scan"
                    android:src="@drawable/ic_fam_find"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fab:fab_size="mini"
                    fab:fab_colorNormal="@color/secondary"
                    fab:fab_title="@string/fab_choice_scan_pkpass_files"
                    fab:fab_colorPressed="@color/icon_green"/>


            <net.i2p.android.ext.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_action_create_pass"
                    android:src="@drawable/ic_fam_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fab:fab_size="mini"
                    fab:fab_colorNormal="@color/secondary"
                    fab:fab_title="@string/fab_choice_create_pass"
                    fab:fab_colorPressed="@color/icon_green"/>


        </net.i2p.android.ext.floatingactionbutton.FloatingActionsMenu>

        </RelativeLayout>

    <FrameLayout
            android:id="@+id/left_drawer"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@android:color/white"/>

</android.support.v4.widget.DrawerLayout>